senior lint changes

--- a/.markuplintrc
+++ b/.markuplintrc
@@ -16,13 +16,13 @@
     "required-h1": false,
     "wai-aria": true,
     "class-naming": "/.+/",
-    "attr-equal-space-after": true,
-    "attr-equal-space-before": true,
-    "attr-spacing": true,
+
+
+
     "attr-value-quotes": true,
     "case-sensitive-attr-name": true,
-    "case-sensitive-tag-name": true,
-    "indentation": 2
+    "case-sensitive-tag-name": true
+
   },
   "nodeRules": [
     {
@@ -43,14 +43,6 @@
         "character-reference": false
       }
     }
-  ],
-  "childNodeRules": [
-    {
-      "selector": "html",
-      "inheritance": false,
-      "rules": {
-        "indentation": false
-      }
-    }
   ]
+
 }
