--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "eslint:recommended",
-    "standard"
+    "standard",
+    "prettier"
   ],
   "settings": {
     "react": {
@@ -19,37 +20,11 @@
     }
   },
   "rules": {
-    "arrow-parens":"off",
-    "curly": [
-      "error",
-      "multi-line"
-    ],
     "no-console": "off",
-    "no-restricted-globals": [
-      "error",
-      {
-        "name": "event",
-        "message": "Listener function's event parameter is missing."
-      }
-    ],
-    "no-var": "off",
-    "padded-blocks": "off",
-    "space-before-function-paren": [
-      "error",
-      {
-        "anonymous": "always",
-        "named": "never",
-        "asyncArrow": "always"
-      }
-    ],
-    "semi": [
-      "error",
-      "always"
-    ],
-    "react/jsx-filename-extension": [
-      "error"
-    ]
-  },
+    "object-shorthand": "off"
+      },
+
+
   "overrides": [
     {
       "files": [
@@ -59,36 +34,7 @@
         "mocha": true
       }
     },
-    {
-      "files": [
-        "**/*.jsx"
-      ],
-      "rules": {
-        "react/prop-types": "off",
-        "react/jsx-curly-brace-presence": [
-          "error",
-          "never"
-        ],
-        "react/jsx-indent": [
-          "error",
-          2,
-          { "checkAttributes": true }
-        ],
-        "react/self-closing-comp": [
-          "error",
-          {
-            "html": false,
-            "component": true
-          }
-        ],
-        "react/style-prop-object": [
-          "error"
-        ],
-        "react/no-this-in-sfc": [
-          "error"
-        ]
-      }
-    },
+
     {
       "files": [
         "**/*.html"
@@ -97,5 +43,4 @@
         "eslint-plugin-html"
       ]
     }
-  ]
-}
+  ]}
