--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,5 @@
 {
-  "arrowParens": "avoid",
   "bracketSameLine": true,
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "none"
+  "singleQuote": true
+
 }
