--- a/express-delete/package.json
+++ b/express-delete/package.json
@@ -7,11 +7,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "express": "^4.18.2"
   },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
