--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "stylelint": "^15.6.1",
     "stylelint-config-recommended": "^12.0.0",
     "stylelint-config-standard": "^33.0.0"
+  },
+  "dependencies": {
+    "react-icons": "^4.8.0"
   }
 }
